code/force-app/main/default/objects/External_Contact__c/External_Contact__c.object-meta.xml
<CustomObject>
    <label>行外聯絡窗口</label>
    <nameField>
        <label>窗口</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>