code/force-app/main/default/objects/External_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>行外聯絡窗口</relationshipLabel>
    <relationshipName>External_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>