code/force-app/main/default/objects/External_Contact__c/fields/External_Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>行外聯絡窗口外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>