code/force-app/main/default/objects/External_Contact__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>行動電話</label>
    <length>18</length>
    <type>Text</type>
</CustomField>