code/force-app/main/default/objects/External_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>市話</label>
    <length>22</length>
    <type>Text</type>
</CustomField>