code/force-app/main/default/objects/External_Contact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>職務</label>
    <length>22</length>
    <type>Text</type>
</CustomField>