code/force-app/main/default/objects/External_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Title__c</columns>
    <columns>Phone__c</columns>
    <columns>Mobile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>